# compete-pulse

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pulse.yml  response.yml
compete-docs/: email_pulse_draft.md  key_differentiators.md
src/ai_tpc_agent/core/: agent.py  watcher.py
src/compete_pulse_agent/: main.py
src/compete_pulse_agent/core/: agent.py  api.py  chat_bridge.py  email_bridge.py  github_bridge.py  maturity.py  pii_scrubber.py  vector_store.py  watcher.py  watchlist.json
tests/: test_agent.py  test_rag.py  test_vertex_rag.py  test_watcher.py
