[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-compete-pulse"
version = "0.1.0"
description = "AI Technical Program Consultant (TPC) Agent for Field Promotion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-adk>=0.1.0",
    "google-genai>=0.2.0",
    "google-cloud-aiplatform>=1.71.0",
    "tenacity>=8.0.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
compete-pulse = "compete_pulse_agent.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/compete_pulse_agent"]
